--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Profile card component</title>
 
@@ -18,10 +18,10 @@
   <main>
     <article class="grid">
       <div class="bg-holder">
-        <img src="images/bg-pattern-card.svg" alt="">
+        <img src="bg-pattern-card.svg" alt="">
       </div>
       <figure>
-        <img src="images/image-victor.jpg" class="picture" alt="a picture of victor">
+        <img src="image-victor.jpg" class="picture" alt="a picture of victor">
       </figure>
       <div class="about-victor">
         <div>
